--- a/Draw/Controller/Share/ShareCell.xib
+++ b/Draw/Controller/Share/ShareCell.xib
@@ -31,26 +31,28 @@
 				<string key="IBProxiedObjectIdentifier">IBFirstResponder</string>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 			</object>
-			<object class="IBUITableViewCell" id="466262694">
+			<object class="IBUITableViewCell" id="695172771">
 				<reference key="NSNextResponder"/>
 				<int key="NSvFlags">292</int>
 				<array class="NSMutableArray" key="NSSubviews">
-					<object class="IBUIView" id="696539891">
-						<reference key="NSNextResponder" ref="466262694"/>
+					<object class="IBUIView" id="1015859549">
+						<reference key="NSNextResponder" ref="695172771"/>
 						<int key="NSvFlags">256</int>
 						<array class="NSMutableArray" key="NSSubviews">
-							<object class="IBUIButton" id="717277610">
-								<reference key="NSNextResponder" ref="696539891"/>
+							<object class="IBUIButton" id="532043362">
+								<reference key="NSNextResponder" ref="1015859549"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrameSize">{89, 89}</string>
-								<reference key="NSSuperview" ref="696539891"/>
-								<reference key="NSNextKeyView" ref="974630360"/>
+								<reference key="NSSuperview" ref="1015859549"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="562252175"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUITag">10</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<object class="NSColor" key="IBUIHighlightedTitleColor" id="1024877674">
+								<object class="NSColor" key="IBUIHighlightedTitleColor" id="638657616">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MQA</bytes>
 								</object>
@@ -58,63 +60,68 @@
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<object class="NSColor" key="IBUINormalTitleShadowColor" id="68905650">
+								<object class="NSColor" key="IBUINormalTitleShadowColor" id="463138712">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MC41AA</bytes>
 								</object>
-								<object class="IBUIFontDescription" key="IBUIFontDescription" id="1039936897">
+								<object class="IBUIFontDescription" key="IBUIFontDescription" id="331446166">
 									<int key="type">2</int>
 									<double key="pointSize">15</double>
 								</object>
-								<object class="NSFont" key="IBUIFont" id="710805618">
+								<object class="NSFont" key="IBUIFont" id="589791467">
 									<string key="NSName">Helvetica-Bold</string>
 									<double key="NSSize">15</double>
 									<int key="NSfFlags">16</int>
 								</object>
 							</object>
-							<object class="IBUIButton" id="974630360">
-								<reference key="NSNextResponder" ref="696539891"/>
+							<object class="IBUIButton" id="562252175">
+								<reference key="NSNextResponder" ref="1015859549"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{96, 0}, {89, 89}}</string>
-								<reference key="NSSuperview" ref="696539891"/>
-								<reference key="NSNextKeyView" ref="243753525"/>
+								<reference key="NSSuperview" ref="1015859549"/>
+								<reference key="NSWindow"/>
+								<reference key="NSNextKeyView" ref="87693641"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUITag">11</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="1024877674"/>
+								<reference key="IBUIHighlightedTitleColor" ref="638657616"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="68905650"/>
-								<reference key="IBUIFontDescription" ref="1039936897"/>
-								<reference key="IBUIFont" ref="710805618"/>
+								<reference key="IBUINormalTitleShadowColor" ref="463138712"/>
+								<reference key="IBUIFontDescription" ref="331446166"/>
+								<reference key="IBUIFont" ref="589791467"/>
 							</object>
-							<object class="IBUIButton" id="243753525">
-								<reference key="NSNextResponder" ref="696539891"/>
+							<object class="IBUIButton" id="87693641">
+								<reference key="NSNextResponder" ref="1015859549"/>
 								<int key="NSvFlags">292</int>
 								<string key="NSFrame">{{191, 0}, {89, 89}}</string>
-								<reference key="NSSuperview" ref="696539891"/>
+								<reference key="NSSuperview" ref="1015859549"/>
+								<reference key="NSWindow"/>
 								<string key="NSReuseIdentifierKey">_NS:9</string>
 								<bool key="IBUIOpaque">NO</bool>
+								<int key="IBUITag">12</int>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<int key="IBUIContentHorizontalAlignment">0</int>
 								<int key="IBUIContentVerticalAlignment">0</int>
-								<reference key="IBUIHighlightedTitleColor" ref="1024877674"/>
+								<reference key="IBUIHighlightedTitleColor" ref="638657616"/>
 								<object class="NSColor" key="IBUINormalTitleColor">
 									<int key="NSColorSpace">1</int>
 									<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
 								</object>
-								<reference key="IBUINormalTitleShadowColor" ref="68905650"/>
-								<reference key="IBUIFontDescription" ref="1039936897"/>
-								<reference key="IBUIFont" ref="710805618"/>
+								<reference key="IBUINormalTitleShadowColor" ref="463138712"/>
+								<reference key="IBUIFontDescription" ref="331446166"/>
+								<reference key="IBUIFont" ref="589791467"/>
 							</object>
 						</array>
 						<string key="NSFrameSize">{280, 89}</string>
-						<reference key="NSSuperview" ref="466262694"/>
-						<reference key="NSNextKeyView" ref="717277610"/>
+						<reference key="NSSuperview" ref="695172771"/>
+						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView" ref="532043362"/>
 						<string key="NSReuseIdentifierKey">_NS:11</string>
 						<object class="NSColor" key="IBUIBackgroundColor">
 							<int key="NSColorSpace">3</int>
@@ -129,41 +136,45 @@
 				</array>
 				<string key="NSFrameSize">{280, 90}</string>
 				<reference key="NSSuperview"/>
-				<reference key="NSNextKeyView" ref="696539891"/>
+				<reference key="NSWindow"/>
+				<reference key="NSNextKeyView" ref="1015859549"/>
 				<string key="NSReuseIdentifierKey">_NS:9</string>
 				<object class="NSColor" key="IBUIBackgroundColor">
 					<int key="NSColorSpace">1</int>
 					<bytes key="NSRGB">MC42NTg4MjM1Mjk0IDAuNTAxOTYwNzg0MyAwLjM0NTA5ODAzOTIAA</bytes>
 				</object>
 				<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
-				<reference key="IBUIContentView" ref="696539891"/>
+				<reference key="IBUIContentView" ref="1015859549"/>
 			</object>
 		</array>
 		<object class="IBObjectContainer" key="IBDocument.Objects">
 			<array class="NSMutableArray" key="connectionRecords">
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">leftButton</string>
-						<reference key="source" ref="466262694"/>
-						<reference key="destination" ref="717277610"/>
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickImageButton:</string>
+						<reference key="source" ref="532043362"/>
+						<reference key="destination" ref="695172771"/>
+						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">7</int>
+					<int key="connectionID">14</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">middleButton</string>
-						<reference key="source" ref="466262694"/>
-						<reference key="destination" ref="974630360"/>
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickImageButton:</string>
+						<reference key="source" ref="562252175"/>
+						<reference key="destination" ref="695172771"/>
+						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">8</int>
+					<int key="connectionID">15</int>
 				</object>
 				<object class="IBConnectionRecord">
-					<object class="IBCocoaTouchOutletConnection" key="connection">
-						<string key="label">rightButton</string>
-						<reference key="source" ref="466262694"/>
-						<reference key="destination" ref="243753525"/>
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">clickImageButton:</string>
+						<reference key="source" ref="87693641"/>
+						<reference key="destination" ref="695172771"/>
+						<int key="IBEventType">7</int>
 					</object>
-					<int key="connectionID">9</int>
+					<int key="connectionID">16</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -187,28 +198,28 @@
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">3</int>
-						<reference key="object" ref="466262694"/>
+						<reference key="object" ref="695172771"/>
 						<array class="NSMutableArray" key="children">
-							<reference ref="717277610"/>
-							<reference ref="974630360"/>
-							<reference ref="243753525"/>
+							<reference ref="532043362"/>
+							<reference ref="562252175"/>
+							<reference ref="87693641"/>
 						</array>
 						<reference key="parent" ref="0"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">4</int>
-						<reference key="object" ref="717277610"/>
-						<reference key="parent" ref="466262694"/>
+						<reference key="object" ref="532043362"/>
+						<reference key="parent" ref="695172771"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">5</int>
-						<reference key="object" ref="974630360"/>
-						<reference key="parent" ref="466262694"/>
+						<reference key="object" ref="562252175"/>
+						<reference key="parent" ref="695172771"/>
 					</object>
 					<object class="IBObjectRecord">
 						<int key="objectID">6</int>
-						<reference key="object" ref="243753525"/>
-						<reference key="parent" ref="466262694"/>
+						<reference key="object" ref="87693641"/>
+						<reference key="parent" ref="695172771"/>
 					</object>
 				</array>
 			</object>
@@ -226,9 +237,31 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">9</int>
+			<int key="maxID">16</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<object class="IBPartialClassDescription">
+					<string key="className">ShareCell</string>
+					<string key="superclassName">UITableViewCell</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">clickImageButton:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">clickImageButton:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">clickImageButton:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/ShareCell.h</string>
+					</object>
+				</object>
+			</array>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
