--- a/Draw/Controller/Shop/CoinShopController.xib
+++ b/Draw/Controller/Shop/CoinShopController.xib
@@ -69,9 +69,10 @@
 					<object class="IBUITableView" id="1035910774">
 						<reference key="NSNextResponder" ref="191373211"/>
 						<int key="NSvFlags">274</int>
-						<string key="NSFrame">{{8, 100}, {304, 340}}</string>
+						<string key="NSFrame">{{8, 100}, {304, 350}}</string>
 						<reference key="NSSuperview" ref="191373211"/>
 						<reference key="NSWindow"/>
+						<reference key="NSNextKeyView"/>
 						<object class="NSColor" key="IBUIBackgroundColor" id="636147576">
 							<int key="NSColorSpace">3</int>
 							<bytes key="NSWhite">MQA</bytes>
